[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "Click button, receive log message"
bundle = "org.asheesh"
version = "0.0.1"
license = "BSD license"
author = 'Asheesh Laroia'
author_email = "asheesh@asheesh.org"

[tool.briefcase.app.click_button_receive_log]
formal_name = "Hello World"
description = "My first application"
icon = "src/click_button_receive_log/resources/click_button_receive_log"
sources = ['src/click_button_receive_log']
requires = []

[tool.briefcase.app.click_button_receive_log.android]
template = "https://github.com/beeware/briefcase-android-gradle-template"
support_package = "https://github.com/paulproteus/Python-Android-support-old/releases/download/v0.6/3.7.zip"
